Print aligned with ansi sequences